[package]
name = "crc64fast"
version = "1.0.0"
authors = ["The TiKV Project Developers"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["crc", "crc64", "simd", "checksum"]
repository = "https://github.com/tikv/crc64fast"
description = "SIMD accelerated CRC64 calculation"
exclude = ["build_table.rs"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
crc = "1"
proptest = "1"
criterion = "0.3"
rand = "0.8"

[features]
pmull = []
vpclmulqdq = ["lazy_static"]
fake-simd = []

[[bench]]
name = 'benchmark'
harness = false
